// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizeProvider loadingComponent renders children if loading and loading component is not provided 1`] = `
<div>
  Child
</div>
`;

exports[`LocalizeProvider loadingComponent renders if loading and loading component is provided 1`] = `
<div>
  Loading...
</div>
`;
